--- a/FOS_summary.ipynb
+++ b/FOS_summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d640a256-a2a0-4a40-acf1-d4eefcb863e1",
    "metadata": {
     "tags": []
@@ -12,9 +12,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: google-cloud-aiplatform in ./.local/lib/python3.10/site-packages (1.25.0)\n",
-      "Collecting google-cloud-aiplatform\n",
-      "  Using cached google_cloud_aiplatform-1.43.0-py2.py3-none-any.whl.metadata (27 kB)\n",
+      "Requirement already satisfied: google-cloud-aiplatform in ./.local/lib/python3.10/site-packages (1.43.0)\n",
       "Requirement already satisfied: pymupdf in ./.local/lib/python3.10/site-packages (1.23.26)\n",
       "Requirement already satisfied: google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1 in /opt/conda/lib/python3.10/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-cloud-aiplatform) (2.17.1)\n",
       "Requirement already satisfied: google-auth<3.0.0dev,>=2.14.1 in /opt/conda/lib/python3.10/site-packages (from google-cloud-aiplatform) (2.27.0)\n",
@@ -43,16 +41,7 @@
       "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/lib/python3.10/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-cloud-aiplatform) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.10/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-cloud-aiplatform) (3.6)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/lib/python3.10/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-cloud-aiplatform) (2.2.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.10/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-cloud-aiplatform) (2024.2.2)\n",
-      "Using cached google_cloud_aiplatform-1.43.0-py2.py3-none-any.whl (4.1 MB)\n",
-      "Installing collected packages: google-cloud-aiplatform\n",
-      "  Attempting uninstall: google-cloud-aiplatform\n",
-      "    Found existing installation: google-cloud-aiplatform 1.25.0\n",
-      "    Uninstalling google-cloud-aiplatform-1.25.0:\n",
-      "      Successfully uninstalled google-cloud-aiplatform-1.25.0\n",
-      "\u001b[33m  WARNING: The script tb-gcp-uploader is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
-      "\u001b[0mSuccessfully installed google-cloud-aiplatform-1.43.0\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.10/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,<3.0.0dev,>=1.34.1->google-cloud-aiplatform) (2024.2.2)\n"
      ]
     }
    ],
@@ -62,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cdbaa59e-eb31-404d-ab01-6531fbae2761",
    "metadata": {
     "tags": []
@@ -74,7 +63,7 @@
        "{'status': 'ok', 'restart': True}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c1c95048-d693-44e7-b9b3-0fe773aa9c9e",
    "metadata": {
     "tags": []
@@ -257,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "05fc27de-159e-4813-9e48-339a43f7b2d5",
    "metadata": {
     "scrolled": true,
@@ -265,14 +254,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'text_extracts/DRN-1000090_2019-01-03.txt'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 23\u001b[0m\n\u001b[1;32m     19\u001b[0m                 blob_names\u001b[38;5;241m.\u001b[39mappend(blob\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m blob_names\n\u001b[0;32m---> 23\u001b[0m blob_names \u001b[38;5;241m=\u001b[39m \u001b[43mlist_blobs\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlloyds-genai24lon-2701-bucket\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[13], line 17\u001b[0m, in \u001b[0;36mlist_blobs\u001b[0;34m(bucket_name)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m blob \u001b[38;5;129;01min\u001b[39;00m blobs:\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m blob\u001b[38;5;241m.\u001b[39mname\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.txt\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m---> 17\u001b[0m         date \u001b[38;5;241m=\u001b[39m \u001b[43mblob\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     18\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2023\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m date:\n\u001b[1;32m     19\u001b[0m             blob_names\u001b[38;5;241m.\u001b[39mappend(blob\u001b[38;5;241m.\u001b[39mname)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -292,20 +283,42 @@
     "    blob_names = []\n",
     "    for blob in blobs:\n",
     "        if blob.name.endswith('.txt'):\n",
-    "            print(blob.name)\n",
-    "            break\n",
-    "            blob_names.append(blob.name)\n",
+    "            date = blob.name.split(\"_\")[2]\n",
+    "            if '2023' in date:\n",
+    "                blob_names.append(blob.name)\n",
     "    \n",
     "    return blob_names\n",
     "\n",
-    "blob_names = list_blobs(\"lloyds-genai24lon-2701-bucket\")\n",
-    "blob_names[0]\n",
-    "    "
+    "blob_names = list_blobs(\"lloyds-genai24lon-2701-bucket\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "dd4e61e4-673d-47e4-9752-9e69923c0682",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'blob_names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mblob_names\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'blob_names' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "blob_names[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "28d70d2c-de65-4d9e-81f0-351ee1e10dd6",
    "metadata": {
     "tags": []
@@ -333,6 +346,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a2c01e3b-64fd-4a14-a245-a53aaf254535",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "bf3a119c-6579-4522-b5f0-8455d083cce3",
    "metadata": {
@@ -352,14 +373,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2f6c61ff-4236-48aa-9b2a-0ed962ba74c5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'generate_content' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, blob_name \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(blob_names):\n\u001b[1;32m      4\u001b[0m     data \u001b[38;5;241m=\u001b[39m write_read(bucket_name, blob_name)\n\u001b[0;32m----> 5\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_res\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m     file_id \u001b[38;5;241m=\u001b[39m get_file_id(f)\n\u001b[1;32m      7\u001b[0m     all_res[file_id] \u001b[38;5;241m=\u001b[39m res\n",
+      "Cell \u001b[0;32mIn[11], line 6\u001b[0m, in \u001b[0;36mgenerate_res\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerate_res\u001b[39m(data: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m----> 6\u001b[0m     responses \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_content\u001b[49m(model, contents\u001b[38;5;241m.\u001b[39mformat(text\u001b[38;5;241m=\u001b[39mdata))\n\u001b[1;32m      7\u001b[0m     responses_post \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\n\u001b[1;32m      8\u001b[0m         part\u001b[38;5;241m.\u001b[39mtext\n\u001b[1;32m      9\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m response \u001b[38;5;129;01min\u001b[39;00m responses\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m part \u001b[38;5;129;01min\u001b[39;00m response\u001b[38;5;241m.\u001b[39mcandidates[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcontent\u001b[38;5;241m.\u001b[39mparts\n\u001b[1;32m     11\u001b[0m     )\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m responses_post\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'generate_content' is not defined"
+     ]
+    }
+   ],
    "source": [
     "all_res = {}\n",
-    "for i, f in enumerate(blob_names):\n",
-    "    if "
+    "bucket_name = \"lloyds-genai24lon-2701-bucket\"\n",
+    "for i, blob_name in enumerate(blob_names):\n",
+    "    data = write_read(bucket_name, blob_name)\n",
+    "    res = generate_res(data)\n",
+    "    file_id = get_file_id(f)\n",
+    "    all_res[file_id] = res\n",
+    "    break"
    ]
   },
   {
