--- a/nontas_bigquery_langchain.ipynb
+++ b/nontas_bigquery_langchain.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "76024d2e-4f23-4ae8-83d3-03d583b33425",
    "metadata": {
     "tags": []
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2aa41bb7-3f30-4525-9b20-a0ff2ee2390d",
    "metadata": {
     "tags": []
@@ -541,7 +541,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "1706d350-ddb9-40ed-9ef2-47123056f19b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas-gbq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "cd22cfdd-3295-4924-b234-641d23f039b6",
    "metadata": {
     "tags": []
@@ -549,55 +559,282 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from google.cloud import storage"
+    "from google.cloud import bigquery"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "aba27f10-b734-47d7-8d44-2af19934d3f4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Specify the bucket and blob name\n",
+    "bucket_name = \"lloyds-genai24lon-2701-bucket\"\n",
+    "blob_name = \"summaries//fos_summary_1.csv.csv\"\n",
+    "filename = \"lloyds-genai24lon-2701-bucket/summaries/fos_summary_1.csv\"\n",
+    "# Read the downloaded file as a pandas dataframe\n",
+    "df = pd.read_csv(f'gs://{filename}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "60c6f6b3-5055-4a67-a498-11b5d9fe075a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'unicodeescape' codec can't decode bytes in position 140151-140152: truncated \\xXX escape",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m blob_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msummaries/fos_summary_50example.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Read the downloaded file as a pandas dataframe\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgs://\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mbucket_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mblob_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43municode_escape\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[1;32m   1014\u001b[0m     dialect,\n\u001b[1;32m   1015\u001b[0m     delimiter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[1;32m   1023\u001b[0m )\n\u001b[1;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[0;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:620\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    617\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    619\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[0;32m--> 620\u001b[0m parser \u001b[38;5;241m=\u001b[39m \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[1;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:1620\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1617\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   1619\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1620\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:1898\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1895\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[1;32m   1897\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1898\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmapping\u001b[49m\u001b[43m[\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1899\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1900\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/c_parser_wrapper.py:93\u001b[0m, in \u001b[0;36mCParserWrapper.__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype_backend\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpyarrow\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     91\u001b[0m     \u001b[38;5;66;03m# Fail here loudly instead of in cython after reading\u001b[39;00m\n\u001b[1;32m     92\u001b[0m     import_optional_dependency(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpyarrow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 93\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader \u001b[38;5;241m=\u001b[39m \u001b[43mparsers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTextReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munnamed_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader\u001b[38;5;241m.\u001b[39munnamed_cols\n\u001b[1;32m     97\u001b[0m \u001b[38;5;66;03m# error: Cannot determine type of 'names'\u001b[39;00m\n",
-      "File \u001b[0;32mparsers.pyx:574\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mparsers.pyx:663\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._get_header\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mparsers.pyx:874\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mparsers.pyx:891\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._check_tokenize_status\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mparsers.pyx:2053\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'unicodeescape' codec can't decode bytes in position 140151-140152: truncated \\xXX escape"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>file_name</th>\n",
+       "      <th>text_summary</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>DRN-1074996_2020-04-15</td>\n",
+       "      <td>Mr. A's car was stolen, and the thief was conv...</td>\n",
+       "      <td>DRN-1074996</td>\n",
+       "      <td>2020-04-15</td>\n",
+       "      <td>Mr. A's car was stolen, and the thief was conv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>DRN-2081709_2020-08-18</td>\n",
+       "      <td>Mrs. T complained that AXA France IARD missold...</td>\n",
+       "      <td>DRN-2081709</td>\n",
+       "      <td>2020-08-18</td>\n",
+       "      <td>Mrs. T complained that AXA France IARD missold...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>DRN-1645227_2020-08-12</td>\n",
+       "      <td>Company S complained about errors made by HPS...</td>\n",
+       "      <td>DRN-1645227</td>\n",
+       "      <td>2020-08-12</td>\n",
+       "      <td>Company S complained about errors made by HPS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>DRN-2202979_2020-11-13</td>\n",
+       "      <td>Mrs. R alleges that an interestonly mortgage ...</td>\n",
+       "      <td>DRN-2202979</td>\n",
+       "      <td>2020-11-13</td>\n",
+       "      <td>Mrs. R alleges that an interestonly mortgage ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>DRN-1624150_2020-05-04</td>\n",
+       "      <td>Mr. W filed a chargeback claim with Barclays a...</td>\n",
+       "      <td>DRN-1624150</td>\n",
+       "      <td>2020-05-04</td>\n",
+       "      <td>Mr. W filed a chargeback claim with Barclays a...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0               file_name  \\\n",
+       "0           0  DRN-1074996_2020-04-15   \n",
+       "1           1  DRN-2081709_2020-08-18   \n",
+       "2           2  DRN-1645227_2020-08-12   \n",
+       "3           3  DRN-2202979_2020-11-13   \n",
+       "4           4  DRN-1624150_2020-05-04   \n",
+       "\n",
+       "                                        text_summary           id        date  \\\n",
+       "0  Mr. A's car was stolen, and the thief was conv...  DRN-1074996  2020-04-15   \n",
+       "1  Mrs. T complained that AXA France IARD missold...  DRN-2081709  2020-08-18   \n",
+       "2   Company S complained about errors made by HPS...  DRN-1645227  2020-08-12   \n",
+       "3   Mrs. R alleges that an interestonly mortgage ...  DRN-2202979  2020-11-13   \n",
+       "4  Mr. W filed a chargeback claim with Barclays a...  DRN-1624150  2020-05-04   \n",
+       "\n",
+       "                                              result  \n",
+       "0  Mr. A's car was stolen, and the thief was conv...  \n",
+       "1  Mrs. T complained that AXA France IARD missold...  \n",
+       "2   Company S complained about errors made by HPS...  \n",
+       "3   Mrs. R alleges that an interestonly mortgage ...  \n",
+       "4  Mr. W filed a chargeback claim with Barclays a...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a7cd55e4-eff5-4a49-b166-ad741d81f7f8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/tmp/ipykernel_17025/4201344609.py:7: FutureWarning: to_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.to_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.to_gbq\n",
+      "  df.to_gbq(f'{project_id}.{dataset_id}.{table_id}', if_exists='replace')\n",
+      "100%|██████████| 1/1 [00:00<00:00, 13842.59it/s]\n"
      ]
     }
    ],
    "source": [
-    "# Specify the bucket and blob name\n",
-    "bucket_name = \"lloyds-genai24lon-2701-bucket\"\n",
-    "blob_name = \"summaries/fos_summary_50example.csv\"\n",
+    "# Set the project ID, dataset ID, and table ID\n",
+    "project_id = 'lloyds-genai24lon-2701'\n",
+    "dataset_id = 'lgb_hackathon_2024'\n",
+    "table_id = 'fos_summary_1'\n",
     "\n",
-    "# Read the downloaded file as a pandas dataframe\n",
-    "df = pd.read_csv(f'gs://{bucket_name}/{blob_name}', encoding='unicode_escape')"
+    "# Save the dataframe to the BigQuery table\n",
+    "df.to_gbq(f'{project_id}.{dataset_id}.{table_id}', if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "602b91b5-6ca5-4194-97ac-fe9df28a53bc",
+   "metadata": {},
+   "source": [
+    "## Create input dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a22cf5c0-c690-48df-ac79-2085ee7e4b9a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "REQUESTS_PER_MINUTE = 100\n",
+    "\n",
+    "llm = VertexLLM(\n",
+    "    model_name='text-bison@001',\n",
+    "    max_output_tokens=1024,\n",
+    "    temperature=0.1,\n",
+    "    top_p=0.8,\n",
+    "    top_k=40,\n",
+    "    verbose=True,\n",
+    ")\n",
+    "\n",
+    "chat = VertexChat()\n",
+    "\n",
+    "mchat = VertexMultiTurnChat(max_output_tokens=1024)\n",
+    "\n",
+    "embedding = VertexEmbeddings(requests_per_minute=REQUESTS_PER_MINUTE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d307bb41-dbfe-4c03-b467-bfa8291b9445",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from google.cloud import bigquery\n",
+    "from google.cloud.bigquery import Client\n",
+    "\n",
+    "PROJECT_ID = 'lloyds-genai24lon-2701'\n",
+    "client = Client(project=PROJECT_ID)\n",
+    "DATASET_ID = 'lgb_hackathon_2024'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b464f6f8-0dee-4a53-befb-812902b4963e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import *\n",
+    "from sqlalchemy.engine import create_engine\n",
+    "from sqlalchemy.schema import *\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c6f6b3-5055-4a67-a498-11b5d9fe075a",
+   "id": "2e1f5b5f-d844-4036-b1fa-2c54fe97f689",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = \"\"\"\n",
+    "create or replace table `{PROJECT_ID}.{dataset_id}.summaries`\n",
+    "as\n",
+    "select \n",
+    "from `bigquery-public-data.iowa_liquor_sales.sales`\n",
+    "\"\"\".format(\n",
+    "    PROJECT_ID=PROJECT_ID, dataset_id=dataset_id\n",
+    ")\n",
+    "query_job = client.query(query)\n",
+    "print(query_job.result())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6b0bdc9e-f865-4ae1-be7a-10820c48a501",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "table_uri = f\"bigquery://{PROJECT_ID}/{DATASET_ID}\"\n",
+    "engine = create_engine(f\"bigquery://{PROJECT_ID}/{DATASET_ID}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f669eb27-3eaa-47cf-a9bc-718678363857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query=f\"\"\"SELECT * FROM `{project_id}.{dataset_id}.{table_name}`\"\"\"\n",
+    "engine.execute(query).first()"
+   ]
   }
  ],
  "metadata": {
