--- a/FOS-1.ipynb
+++ b/FOS-1.ipynb
@@ -287,11 +287,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "989feb6c-4402-4d60-9676-1329b70cedb9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa({\"query\": \"what is the most commonly used word\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "699433c7-a751-44ef-87a2-a8888244b1b9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'what is the most commonly used word',\n",
+       " 'result': ' The most commonly used word in the text is \"and\".',\n",
+       " 'source_documents': [Document(page_content='figure, the calculation would result in the same figure for the value of the claim; and S is only\\n\\nable to recover its actual loss, which is its lost profit.\\n\\nThe issue however, is the sum insured.\\n\\nSum insured and underinsurance\\n\\nI have not considered whether its fair and reasonable for the underwriters to apply the\\n\\naverage clause, as this was not part of Ss complaint. S can raise a separate complaint\\n\\nabout whether that was fair if it wishes. What I have been asked to determine in this decision\\n\\nis whether it was fair to apply the average clause based on Ss revenue or income/profit.\\n\\nThe policy schedule says that there is cover for business interruption as follows:\\n\\nLoss of revenue £500,000\\n\\nAdditional Increased cost of working £ not insured\\n\\nIndemnity period 12 months.\\n\\nThe underwriters say the policy was provided on a gross revenue basis and the premium\\n\\nwas calculated on the basis of Ss revenue (not income/profit) being £500,000 per annum.', metadata={'source': 'gs://lloyds-genai24lon-2701-bucket/sample/DRN-3297420_2023-01-04.txt'}),\n",
+       "  Document(page_content='considered all the evidence provided. If I dont comment on or refer to everything Ive been\\n\\nsent or that either party have said this isnt meant as a discourtesy or because I havent\\n\\nthought about it. Rather, it is because my decision will address what I consider to be the key\\n\\nissues in deciding what is fair and reasonable.\\n\\nIve taken into account relevant law and regulations, regulators rules, guidance and\\n\\nstandards and codes of practice, and what I consider to have been good industry practice at\\n\\nthe time. This includes the Principles for Business (PRIN) and the Conduct of Business\\n\\nSourcebook (COBS). And where the evidence is incomplete, inconclusive or contradictory,\\n\\nI reach my conclusions on the balance of probabilities  that is, what I think is more likely\\n\\nthan not to have happened based on the available evidence and the wider surrounding\\n\\ncircumstances.\\n\\nThe applicable rules, regulations and requirements', metadata={'source': 'gs://lloyds-genai24lon-2701-bucket/sample/DRN-3201933_2023-01-27.txt'})]}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "b39c409b-11ac-438b-ab9e-d08af30be545",
    "metadata": {
     "tags": []
@@ -312,12 +342,12 @@
    "source": [
     "def chatbot(inputtext):\n",
     "    result = qa({\"query\": inputtext})\n",
-    "    return result['result'], get_public_url(result['source_documents'][0].metadata['source'], result['source_documents'][0])"
+    "    return result['result'], get_public_url(result['source_documents'][0].metadata['source']), result['source_documents'][1].metadata['source']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "5c7d520d-cce9-4ac2-a212-fd28c43d3f02",
    "metadata": {
     "tags": []
@@ -328,7 +358,7 @@
     "    components = url.split(\"/\")\n",
     "    bucket_name = components[2]\n",
     "    file_name = components[3]\n",
-    "    client = storage.client()\n",
+    "    client = storage.Client()\n",
     "    bucket = client.bucket(bucket_name)\n",
     "    blob = bucket.blob(file_name)\n",
     "    return blob.public_url"
@@ -336,28 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "ca356416-2301-4700-8f6b-2c3fff787f64",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gradio as gr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "fb9d5a6d-ce25-4c6e-a880-fabedd1ab607",
    "metadata": {
     "tags": []
@@ -369,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "id": "8c1382f4-7249-4c4d-9554-ea71da095716",
    "metadata": {
     "tags": []
@@ -385,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "0dd1d4a9-111c-44a2-91ee-d9dc28256496",
    "metadata": {
     "tags": []
@@ -395,8 +416,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
-      "Running on public URL: https://668675606f7a03fee3.gradio.live\n",
+      "Running on local URL:  http://127.0.0.1:7863\n",
+      "Running on public URL: https://194ad630f5d8190efe.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -404,7 +425,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://668675606f7a03fee3.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://194ad630f5d8190efe.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -417,7 +438,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
