--- a/nontas_bigquery_langchain.ipynb
+++ b/nontas_bigquery_langchain.ipynb
@@ -907,20 +907,38 @@
     "  #create SQL DB Chain with the initialized LLM and above SQLDB instance\n",
     "  db_chain = SQLDatabaseChain.from_llm(llm, db, verbose=True, return_intermediate_steps=True)\n",
     "\n",
-    "  #Define prompt for BigQuery SQL\n",
-    "  _googlesql_prompt = \"\"\"You are a BigQuery SQL expert. Given an input question, first create a syntactically correct BigQuery query to run, then look at the results of the query and return the answer to the input question.\n",
-    "  Unless the user specifies in the question a specific number of examples to obtain, query for at most {top_k} results using the LIMIT clause as per BigQuery SQL. You can order the results to return the most informative data in the database.\n",
-    "  Never query for all columns from a table. You must query only the columns that are needed to answer the question. Wrap each column name in backticks (`) to denote them as delimited identifiers.\n",
-    "  Pay attention to use only the column names you can see in the tables below. Be careful to not query for columns that do not exist. Also, pay attention to which column is in which table.\n",
-    "  Use the following format:\n",
-    "  Question: \"Question here\"\n",
-    "  SQLQuery: \"SQL Query to run\"\n",
-    "  SQLResult: \"Result of the SQLQuery\"\n",
-    "  Answer: \"Final answer here\"\n",
-    "  Only use the following tables:\n",
-    "  {table_info}\n",
+    "#   #Define prompt for BigQuery SQL\n",
+    "#   _googlesql_prompt = \"\"\"You are a BigQuery SQL expert. Given an input question, first create a syntactically correct BigQuery query to run, then look at the results of the query and return the answer to the input question.\n",
+    "#   Unless the user specifies in the question a specific number of examples to obtain, query for at most {top_k} results using the LIMIT clause as per BigQuery SQL. You can order the results to return the most informative data in the database.\n",
+    "#   Never query for all columns from a table. You must query only the columns that are needed to answer the question. Wrap each column name in backticks (`) to denote them as delimited identifiers.\n",
+    "#   Pay attention to use only the column names you can see in the tables below. Be careful to not query for columns that do not exist. Also, pay attention to which column is in which table.\n",
+    "#   Use the following format:\n",
+    "#   Question: \"Question here\"\n",
+    "#   SQLQuery: \"SQL Query to run\"\n",
+    "#   SQLResult: \"Result of the SQLQuery\"\n",
+    "#   Answer: \"Final answer here\"\n",
+    "#   Only use the following tables:\n",
+    "#   {table_info}\n",
     "\n",
-    "  If someone asks for specific month, use ActivityDate between current month's start date and current month's end date\n",
+    "#   If someone asks for specific month, use ActivityDate between current month's start date and current month's end date\n",
+    "\n",
+    "#   Question: {input}\"\"\"\n",
+    "\n",
+    "  # Define prompt for BigQuery SQL\n",
+    "  _googlesql_prompt = \"\"\"You are an expert in converting English questions to SQL query.\n",
+    "    The SQL database has the name fos_dataset.fos_table and has the following columns - file_name, text_summary, \n",
+    "    id, date \n",
+    "    \n",
+    "    For example,\n",
+    "    \n",
+    "    Example 1 - How many entries of records are present?, \n",
+    "    the SQL command will be something like this SELECT COUNT(*) FROM fos_dataset.fos_table;\n",
+    "    \n",
+    "    Example 2 - Tell me what does DRN-2823174 complain about?, \n",
+    "    the SQL command will be something like this SELECT * FROM fos_dataset.fos_table\n",
+    "    where id=\"DRN-2823174\"; \n",
+    "    \n",
+    "    also the sql code should not have ``` in beginning or end and sql word in output\n",
     "\n",
     "  Question: {input}\"\"\"\n",
     "\n",
