HACKATHON 2024: add all the great stuff

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -38,6 +38,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "0ad1dd31-81de-4917-8996-1b2a4b2bdac2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(PROJECT_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "eaf0ffd7-9918-4a6b-a2c4-2a54877e7899",
    "metadata": {
     "tags": []
